feat: add qr codes
