# app/Http/Controllers/UrlShortenerWebController.php
@@ -4,6 +4,7 @@ declare(strict_types=1);
 
 namespace App\Http\Controllers;
 
+use App\Actions\CreateQrCode;
 use App\Actions\CreateShortUrl;
 use App\Actions\ResolveShortUrl;
 use App\Http\Requests\StoreShortUrlRequest;
@@ -14,7 +15,8 @@ class UrlShortenerWebController extends Controller
 {
     public function __construct(
         private readonly CreateShortUrl $createShortUrl,
-        private readonly ResolveShortUrl $resolveShortUrl
+        private readonly ResolveShortUrl $resolveShortUrl,
+        private readonly CreateQrCode $createQrCode,
     ) {}
 
     public function create(): View
@@ -28,10 +30,12 @@ class UrlShortenerWebController extends Controller
             $request->url,
             $request->custom_alias
         );
+        $shortUrlValue = $this->createShortUrl->getShortUrl($shortUrl->short_code);
 
         return view('url-shortener.create', [
-            'shortUrl' => $this->createShortUrl->getShortUrl($shortUrl->short_code),
+            'shortUrl' => $shortUrlValue,
             'originalUrl' => $shortUrl->original_url,
+            'qrCode' => $this->createQrCode->execute($shortUrlValue)
         ]);
     }
 
